[package]
name = "scannerlib"
version = "0.1.0"
edition = "2024"
license = "GPL-2.0-or-later"

[workspace.dependencies]
tokio = { version = "1.39.3", features = ["full"] }
anyhow = "1.0.75"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "2.0.14"
tracing = "0.1.37"
uuid = { version = "1", features = ["v4", "fast-rng", "serde"] }
futures = "0.3.30"
futures-util = "0.3.28"
time = { version = "0", features = ["parsing"] }
sha2 = "0.10.7"
rustls = "0.23.31"
rustls-pemfile = "2.2.0"
rustls-pemfile-old = { version = "1.0.2", package = "rustls-pemfile" }
tokio-rustls = "0.26.0"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0", features = ["tokio"] }
hyper-rustls = "0"
http-body = "1"
http-body-util = "0.1.0"
clap = { version = "4.5.27", features = ["derive", "env"] }
reqwest = "0.12.23"
insta = { version = "1.41.1", features = ["ron", "toml"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
cc = "1.0"

[dependencies]
aes = "0.8.2"
aes-gcm = { version = "0.10.1" }
async-trait = "0.1.68"
base64 = "0.21.2"
blowfish = "0.9.1"
cbc = { version = "0.1.2", features = ["alloc"] }
ccm = "0.5.0"
chacha20 = "0.9.1"
chrono = { version = "0.4.23", default-features = false, features = ["clock"] }
cmac = "0.7.2"
codespan-reporting = "0.12.0"
configparser = "3"
ctr = "0.9.2"
des = "0.8.1"
digest = "0.10.6"
dns-lookup = "2.0"
docker-registry = { version = "0.7.0", features = ["reqwest-rustls"] }
dsa = "0.6.3"
flate2 = "1.0.25"
generic-array = "0.14"
glob = "0.3.1"
h2 = "0.4.4"
hex = "0.4.3"
hmac = "0.12.1"
http = "1.1.0"
itertools = "0.14.0"
lazy-regex = "3.3.0"
lazy_static = "1.4.0"
libc = "0.2"
libssh-rs = { version = "0.3.5", features = ["vendored-openssl", "vendored",], optional = true }
md-5 = "0.10.5"
md2 = "0.10.2"
md4 = "0.10.2"
mtu = { version = "0.2.9", optional = true }
pathdiff = "0.2.3"
pbkdf2 = { version = "0.12.2", features = ["password-hash"] }
pcap = { version = "2.3.0", optional = true, features = ["capture-stream"] }
pkcs8 = { version = "0.10.2", features = ["encryption", "pem", "std"] }
pnet = { version = "0.35.0", optional = true }
pnet_base = { version = "0.35.0", optional = true }
pnet_macros = { version = "0.35.0", optional = true }
pnet_macros_support = { version = "0.35.0", optional = true }
quick-xml = { version = "0.38.1", features = ["serde", "serde-types", "serialize",] }
rand = "0.8.5"
rc4 = "0.1.0"
redis = "0.22.3"
regex = "1.10.6"
ripemd = "0.1.3"
rsa = { version = "0.9.8", features = ["hazmat"] }
russh = "0.46.0"
russh-keys = "0.46.0"
sequoia-ipc = "0.36.0"
sequoia-openpgp = { version = "2.0.0", default-features = false, features = ["crypto-openssl",] }
sha1 = "0.10.5"
socket2 = { version = "0.6.0", features = ["all"] }
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio-rustls" ] }
sysinfo = "0.37.0"
toml = "0.9.5"
urlencoding = "2.1.2"
walkdir = "2"
x509-certificate = "0.24.0"
x509-parser = "0.17.0"

anyhow = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-rustls = { workspace = true }
hyper-util = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = {workspace = true }
tokio-rustls = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

nasl-function-proc-macro = { path = "crates/nasl-function-proc-macro" }
greenbone-scanner-framework = { path = "crates/greenbone-scanner-framework" }
nasl-c-lib = { path = "crates/nasl-c-lib", optional = true }
rpmdb = { path = "crates/rpmdb-rs" }

[dev-dependencies]
tracing-test = "0.2.5"
criterion = "0"
once_cell = "1.20.1"
insta = { workspace = true }
mockito = "1.7.0"

[build-dependencies]
flate2 = "1"
tar = "0"

[workspace]
members = ["crates/smoketest", "crates/nasl-function-proc-macro", "crates/greenbone-scanner-framework"]

[features]
default = ["enforce-no-trailing-arguments"]
nasl-builtin-raw-ip = [
    "mtu",
    "pcap",
    "pnet_base",
    "pnet",
    "pnet_macros",
    "pnet_macros_support",
]
nasl-builtin-libssh = ["libssh-rs"]
experimental = ["nasl-builtin-raw-ip", "nasl-builtin-libssh", "nasl-c-lib"]
enforce-no-trailing-arguments = []

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-2.0-or-later"

[profile.release-lto]
inherits = "release"
lto = true
codegen-units = 1

[[bin]]
name = "openvasd"
path = "src/openvasd/main.rs"

[[bin]]
name = "scannerctl"
path = "src/scannerctl/main.rs"

[[bin]]
name = "feed-verifier"
path = "src/feed_verifier/main.rs"

[[bin]]
name = "feed-filter"
path = "src/feed_filter/main.rs"

[[bench]]
name = "nasl_syntax_parse"
harness = false

[[bench]]
name = "interpreter"
harness = false
