[package]
name = "scannerlib"
version = "0.1.0"
edition = "2024"
license = "GPL-2.0-or-later"
build = "build.rs"

[workspace.dependencies]
anyhow = "1.0.102"
cc = "1.2"
bindgen = "0.72"
clap = { version = "4.6.1", features = ["derive", "env"] }
futures = "0.3.32"
futures-util = "0.3.32"
http-body = "1"
http-body-util = "0.1.3"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0", features = ["tokio"] }
insta = { version = "1.48.0", features = ["ron", "toml"] }
rustls = "0.23.41"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"
thiserror = "2.0.18"
time = { version = "0", features = ["parsing"] }
tokio = { version = "1.52.3", features = ["full"] }
tokio-rustls = "0.26.4"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-appender = "0.2.5"
uuid = { version = "1", features = ["v4", "fast-rng", "serde"] }
once_cell = "1"

[dependencies]
aes = "0.8.4"
aes-gcm = { version = "0.10.3" }
async-trait = "0.1.89"
base64 = "0.22.1"
blowfish = "0.9.1"
cbc = { version = "0.1.2", features = ["alloc"] }
ccm = "0.5.0"
chacha20 = "0.9.1"
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
cmac = "0.7.2"
codespan-reporting = "0.13.1"
configparser = "3"
ctr = "0.9.2"
des = "0.8.1"
digest = "0.10.7"
dns-lookup = "3.0"
docker-registry = { version = "0", features = ["reqwest-rustls"] }
dsa = "0.6.3"
ecb = "0.1.2"
flate2 = "1"
generic-array = "1.4.3"
glob = "0.3.3"
h2 = "0.4.15"
hex = "0.4.3"
hmac = "0.12.1"
http = "1.4.2"
itertools = "0.15.0"
lazy-regex = "3.6.0"
lazy_static = "1.5.0"
libc = "0.2"
md-5 = "0.10.6"
md2 = "0.10.2"
md4 = "0.10.2"
mtu = { version = "0.4.1" }
nix = { version = "0.29", features = ["resource"] }
nt-time = "0.15.0"
num-bigint = "0.4.6"
pathdiff = "0.2.3"
pbkdf2 = { version = "0.12.2", features = ["password-hash"] }
pcap = { version = "2.4.0", features = ["capture-stream"] }
pkcs8 = { version = "0.10.2", features = ["encryption", "pem", "std"] }
pnet = { version = "0.35.0" }
pnet_base = { version = "0.35.0" }
pnet_macros = { version = "0.35.0" }
pnet_macros_support = { version = "0.35.0" }
quick-xml = { version = "0.38.4", features = [
    "serde", 
    "serde-types", 
    "serialize",
] }
rand = "0.10.1"
rc4 = "0.1.0"
redis = "0.32.7"
regex = "1.12.4"
reqwest = { version = "0.12", features = ["json", "blocking"] }
ripemd = "0.1.3"
rsa = { version = "0.9.10", features = ["hazmat"] }
russh = "0.61"
rustls-native-certs = "0.8.4"
search_path = "0.1.4"
sequoia-ipc = "0.36.1"
sequoia-openpgp = { version = "2.3.0", default-features = false, features = [
    "crypto-openssl",
] }
sha1 = "0.10.6"
snmp2 = { version = "0.4.14", features = ["full"] }
socket2 = { version = "0.6.4", features = ["all"] }
sqlx = { version = "0", features = ["sqlite", "runtime-tokio-rustls"] }
sysinfo = "0.39.5"
tempfile = "3.27.0"
toml = "1.1.2"
urlencoding = "2.1.3"
walkdir = "2"
x509-certificate = "0.24.0"
x509-parser = "0.17.0"

anyhow = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
hyper = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
uuid = { workspace = true }
once_cell = { workspace = true }
libssh-rs = { version = "0.3.6", features = [
    "vendored-openssl",
    "vendored",
] }

nasl-function-proc-macro = { path = "crates/nasl-function-proc-macro" }
greenbone-scanner-framework = { path = "crates/greenbone-scanner-framework" }
nasl-c-lib = { path = "crates/nasl-c-lib" }
rpmdb = { path = "crates/rpmdb-rs" }
tar = "0"
bzip2 = "0"
zstd = "0"
rustls-pki-types = { version = "1.14.1", features = ["std"] }
cidr = "0.3.2"
fslock = "0.2.1"

[workspace]
members = ["crates/nasl-function-proc-macro"]

[dev-dependencies]
tracing-test = "0.2.6"
criterion = "0"
once_cell = "1.21.4"
insta = { workspace = true }
mockito = "1.7.2"

[build-dependencies]
flate2 = "1"
tar = "0"
vergen-git2 = "10.0.0"

[features]
default = ["enforce-no-trailing-arguments"]
native-rust-ssh = []
enforce-no-trailing-arguments = []

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-2.0-or-later"

[profile.release-lto]
inherits = "release"
lto = true
codegen-units = 1

[[bin]]
name = "openvasd"
path = "src/openvasd/main.rs"

[[bin]]
name = "scannerctl"
path = "src/scannerctl/main.rs"

[[bin]]
name = "feed-filter"
path = "src/feed_filter/main.rs"

[[bench]]
name = "nasl_syntax_parse"
harness = false

[[bench]]
name = "interpreter"
harness = false
