[package]
name = "dep-graph"
version = "0.2.0"
authors = ["Nicolas Moutschen <nicolas.moutschen@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nmoutschen/dep-graph"
description = "Dependency graph resolver library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["parallel"]

parallel = ["rayon", "crossbeam-channel"]

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "dep_graph"
harness = false

[dependencies]
crossbeam-channel = { version = "0.5.8", optional = true }
rayon = { version = "1.8.0", optional = true }
num_cpus = "1.16.0"
