[package]
name = "feed"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nasl-syntax = { path = "../nasl-syntax" }
nasl-interpreter = { path = "../nasl-interpreter" }
storage = { path = "../storage" }
sha2 = "0.10.6"
hex = "0.4.3"
sequoia-ipc = "0.30.1"
sequoia-openpgp = "1.16.1"
anyhow = "1.0.75"
tracing = "0.1.37"
