[package]
name = "models"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1", features = ["derive"], optional = true}
bincode = {version = "2.0.0-rc.3", optional = true }

[features]
default = ["serde_support", "bincode_support"]
serde_support = ["serde"]
bincode_support = ["bincode"]

[dev-dependencies]
serde_json = "1"
# required for credentials
bincode = "2.0.0-rc.3"
