[package]
name = "models"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
serde = { version = "1", features = ["derive"], optional = true }
uuid = { version = "1", features = ["v4"] }
sysinfo = "0.30.5"

[features]
default = ["serde_support"]
serde_support = ["serde"]

[dev-dependencies]
serde_json = "1"
