[package]
name = "nasl-builtin-cryptographic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nasl-builtin-utils = {path = "../nasl-builtin-utils"}
nasl-syntax = {path = "../nasl-syntax"}
# requires libssh > 3.0.0 to be installed
storage = {path = "../storage"}
aes = "0.8.2"
ccm = "0.5.0"
cbc = { version = "0.1.2", features = ["alloc"]}
ctr = "0.9.2"
aes-gcm = { version = "0.10.1"}
cmac = "0.7.2"
hmac = "0.12.1"
hex = "0.4.3"
digest = "0.10.6"
md2 = "0.10.2"
md-5 = "0.10.5"
ripemd = "0.1.3"
sha1 = "0.10.5"
sha2 = "0.10.6"
des = "0.8.1"

# depend on c libraries and are considered unstable for now
nasl-c-lib = {path = "../nasl-c-lib", optional = true}
md4 = "0.10.2"

[dev-dependencies]
nasl-interpreter = {path = "../nasl-interpreter"}
