[package]
name = "nasl-builtin-isotime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nasl-builtin-utils = { path = "../nasl-builtin-utils" }
nasl-function-proc-macro = { path = "../nasl-function-proc-macro" }
nasl-syntax = { path = "../nasl-syntax" }

chrono = "0.4.23"

[dev-dependencies]
nasl-interpreter = { path = "../nasl-interpreter" }
