[package]
name = "nasl-builtin-raw-ip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nasl-builtin-utils = {path = "../nasl-builtin-utils"}
nasl-syntax = {path = "../nasl-syntax"}
storage = {path = "../storage"}
pcap = "1.0.0"
pnet_base = "0.33.0"
pnet = "0.33.0"

[dev-dependencies]
nasl-interpreter = {path = "../nasl-interpreter", features = ["nasl-builtin-raw-ip"]}
