[package]
name = "nasl-builtin-raw-ip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nasl-builtin-utils = {path = "../nasl-builtin-utils"}
nasl-syntax = {path = "../nasl-syntax"}
nasl-builtin-host = {path = "../nasl-builtin-host"}
nasl-builtin-misc = {path = "../nasl-builtin-misc"}
storage = {path = "../storage"}
pcap = "1.0.0"
pnet_base = "0.33.0"
pnet = "0.33.0"
socket2 = {version = "0.5.2", features = ["all"]}
pnet_macros = "0.33.0"
pnet_macros_support = "0.33.0"

[dev-dependencies]
nasl-builtin-std = {path = "../nasl-builtin-std"}
nasl-interpreter = {path = "../nasl-interpreter"}
